move data under static

--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -8,7 +8,7 @@ Login Page Template
 
 <html>
 <head>
-    <title>myCHI</title>
+    <title>Confer</title>
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="initial-scale=1.0 user-scalable=no" />
@@ -200,8 +200,8 @@ $(document).ready(function(){
     <input type="button" id="mychi_login" class="button" value="Log In" />
     <br />
     <div class="credit">
-      Problems or comments? <a href="mailto:mychi@csail.mit.edu">mychi@csail.mit.edu</a><br/>
-      By <a href="http://people.csail.mit.edu/anantb/" target="_blank">Anant</a>, <a href="http://juhokim.com/" target="_blank">Juho</a>, <a href="http://eecs.northwestern.edu/~hq" target="_blank">Haoqi</a>, <a href="http://people.csail.mit.edu/karger/" target="_blank">David</a>, and <a href="http://projectcobi.com/" target="_blank">the Cobi team</a>
+      Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
+      Brought to you by <a href="http://groups.csail.mit.edu/haystack/" target="_blank">MIT Haystack Group</a>, and <a href="http://db.csail.mit.edu/" target="_blank">MIT Database Group</a>
     </div>
 </form>
 </div> <!-- page -->
