--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -9,7 +9,7 @@ Tag papers you want to see and get social recommendations of other papers you ma
 </div>	
 <!--- Home Page -->
 <div id="home">
-  <h3 class="collapsible-title collapsible" id="likes_toggle" data="likes_container"><span class="arrow arrow-down"></span>Papers you want to see <span class="count"></span> <a class="button" href="/bib" id="export_bibtex" target="_blank" style="font-size: small !important; margin-left:3em;">Export BibTeX</a></h3>	
+  <h3 class="collapsible-title collapsible" id="likes_toggle" data="likes_container"><span class="arrow arrow-down"></span>Papers you want to see <span class="count"></span></h3>	
 	<div id="likes_container">
 		<table id="likes" class="paper-container">		
 		</table>
