--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -34,7 +34,7 @@ Tag papers you want to see and get social recommendations of other papers you ma
 	<div id="all_papers_container">
     <div class="search-container">
       <label id="search_label">Search:</label>
-      <input type="text" id="search_papers" title="Enter paper titles, authors, or keywords"></input>&nbsp;&nbsp;
+      <input type="text" id="search_papers" placeholder="Enter paper titles, authors, or keywords" class="search-box"></input>&nbsp;&nbsp;
       <span class="button" id="search_papers_btn">Search</span>
     </div>
 		<table id="all_papers" class="paper-container">	
