--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -131,7 +131,7 @@ Tag sessions and papers you want to see and get updated recommendations on the f
 <br />
 <div class="search-container">
   <label id="search_label">Search:</label>
-  <input type="text" id="search_session" title="Enter session or paper titles, authors, or keywords"></input>&nbsp;&nbsp;
+  <input type="text" id="search_session" placeholder="Enter session or paper titles, authors, or keywords" class="search-box"></input>&nbsp;&nbsp;
   <span class="button" id="search_sessions_btn">Search</span>
   <div id="search-results">Showing <span class="count">all</span> sessions</div>
 </div>
