--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -1,4 +1,11 @@
 {% extends "layout.html" %}
+{% block links %}
+<span id="logged_in_name"></span> &nbsp;
+<a class="button mobile-nav" href="#">Menu</a>
+<a class="button navitem" href="/home">My Papers</a>
+<a class="button active navitem" href="/schedule">My Schedule</a>
+<a class="button navitem" href="/logout">Log Out</a>
+{% endblock %}
 {% block content %}   
 
 <div class="blurb">
