--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -26,6 +26,7 @@ Cobfer Template Layout
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
 <script type="text/javascript" src="/static/json/sigmod2013/papers.json"></script>
 <script type="text/javascript" src="/static/json/sigmod2013/sessions.json"></script>
+<script type="text/javascript" src="/static/json/sigmod2013/schedule.json"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
