basic sigmod data

--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -57,82 +57,13 @@ Tag sessions and papers you want to see and get updated recommendations on the f
 <div id ="time_filter" style="display:inline-block">
     
     <a href="#" data="all" class="time filter active f_all" type="time"/>All</a> 
-    <a href="#" data="t09" class="time filter" type="time"/>09:00-10:20</a>   
-    <a href="#" data="t11" class="time filter" type="time"/>11:00-12:20</a>     
-    <a href="#" data="t14" class="time filter" type="time"/>14:00-15:20</a>          
-    <a href="#" data="t16" class="time filter" type="time"/>16:00-17:20</a>   
-</div>
-</td>
-</tr>
-<tr class="more-filters">
-<td style="vertical-align:top">
-<h4 style="display:inline-block">Venue</h4>  
-</td>
-<td>
-<div id ="venue_filter" style="display:inline-block">
-
-    <a href="#" data="all" class="venue filter active f_all" type="venue"/>All</a>
-    <a href="#" data="paper" class="venue filter" type="venue"/>Paper</a>
-    <a href="#" data="casestudy" class="venue filter" type="venue"/>Case Study</a>
-    <a href="#" data="altchi" class="venue filter" type="venue"/>alt.chi</a>
-    <a href="#" data="course" class="venue filter" type="venue"/>Course </a>
-    <a href="#" data="panel" class="venue filter" type="venue"/>Panel </a>      
-    <a href="#" data="SIG" class="venue filter" type="venue"/>SIG</a>  
-    <a href="#" data="bof" class="venue filter" type="venue"/>BOF</a>
-    <a href="#" data="special" class="venue filter" type="venue"/>Special</a>   
-</div>
-</td>
-</tr>
-<tr class="more-filters">
-<td style="vertical-align:top">
-<h4 style="display:inline-block">Community</h4>
-</td>
-<td>
-<div id ="communities_filter" style="display:inline-block">
-    <a href="#" data="all" class="community filter active f_all" type="community"/>All</a> 
-    <a href="#" data="ux" class="community filter" type="community"/>UX</a>   
-    <a href="#" data="design" class="community filter" type="community"/>Design</a>     
-    <a href="#" data="engineering" class="community filter" type="community"/>Engineering</a>          
-    <a href="#" data="hci4d" class="community filter" type="community"/>HCI4D</a>  
-    <a href="#" data="management" class="community filter" type="community"/>Management</a> 
-    <a href="#" data="sustainability" class="community filter" type="community"/>Sustainability</a> 
-    <a href="#" data="cci" class="community filter" type="community"/>CCI</a>  
-    <a href="#" data="games" class="community filter" type="community"/>Games</a> 
-    <a href="#" data="arts" class="community filter" type="community"/>Arts</a>  
-    <a href="#" data="health" class="community filter" type="community"/>Health</a> 
-</div>
-</td>
-</tr>
-<tr>
-<tr class="more-filters">
-<td style="vertical-align:top">
-<h4 style="display:inline-block">Persona</h4>
-</td>
-<td>
-<div id ="persona_filter" style="display:inline-block">
-
-    <a href="#" data="all" class="persona filter active f_all" type="persona"/>All</a> 
-    <a href="#" data="De" class="persona filter" type="persona"/>Design</a>          
-    <a href="#" data="UI" class="persona filter" type="persona"/>UIST</a>        
-    <a href="#" data="Vi" class="persona filter" type="persona"/>Visualization</a>        
-    <a href="#" data="En" class="persona filter" type="persona"/>Engagement</a>
-
-    <a href="#" data="IO" class="persona filter" type="persona"/>IO</a>
-    <a href="#" data="Et" class="persona filter" type="persona"/>Ethics</a>
-    <a href="#" data="fo" class="persona filter" type="persona"/>For a cause</a> 
-    <!--<a href="#" title="Mi" class="persona filter" type="persona"/>Misc</a>--> 
-
-    <a href="#" data="Se" class="persona filter" type="persona"/>Security and privacy</a>
-    <a href="#" data="Ki" class="persona filter" type="persona"/>Kids and learning </a>  
-    <a href="#" data="He" class="persona filter" type="persona"/>Health</a> 
-    <a href="#" data="On" class="persona filter" type="persona"/>Online social communities &amp; crowdsourcing</a>   
-    
+    <a href="#" data="morning" class="time filter" type="time"/>Morning</a>   
+    <a href="#" data="afternoon1" class="time filter" type="time"/>Afternoon 1</a>     
+    <a href="#" data="afternoon2" class="time filter" type="time"/>Afternoon 2</a>             
 </div>
 </td>
 </tr>
 </table>
-  <br />
-  <a class="button" id="show_filters" style="margin-right:10px;">Show More Filters</a>
 </div>
 <br />
 <br />
