mobile register/login

--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "login-layout.html" %}
 {% block links %}
-<a class="button navitem" href="/login">Log In</a>
+<a class="button" href="/login">Log In</a>
 {% endblock %}
 {% block content %}
 <form method="POST" action="/register" autocomplete="off">
