--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "login-layout.html" %}
 {% block links %}
-<a class="button navitem" href="/register">Create a New Account</a>
+<a class="button" href="/register">Create a New Account</a>
 {% endblock %}
 {% block content %}
 <form method="POST" action="/login">
