--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -62,6 +62,7 @@ Tag papers you want to see and get social recommendations of other papers you ma
       	populate_recs()
       	populate_papers()
       	bind_events()
+        //$('.paper-cb').ellipsis()
         log('home')
     });
 </script>
