--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -27,6 +27,7 @@ Cobfer Template Layout
 <script type="text/javascript" src="/static/json/sigmod2013/papers.json"></script>
 <script type="text/javascript" src="/static/json/sigmod2013/sessions.json"></script>
 <script type="text/javascript" src="/static/json/sigmod2013/schedule.json"></script>
+<script type="text/javascript" src="/static/json/sigmod2013/offline_recs.json"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
