--- a/server/static/css/desktop.css
+++ b/server/static/css/desktop.css
@@ -602,8 +602,8 @@ textarea {
 .paper-cb{
   font-size: 0.9em;
   margin: 0.4em 0 0 0;
-  max-height:3.8em;
-  overflow: hidden;
+  /*max-height:3.8em;
+  overflow: hidden;*/
 }
 .paper-cb:after{
  content: '  ...';
