add special sessions

--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -59,10 +59,11 @@ Tag sessions and papers you want to see and get updated recommendations on the f
 <div id ="time_filter" style="display:inline-block">
     
     <a href="#" data="all" class="time filter active f_all" type="time"/>All</a> 
-    <a href="#" data="morning" class="time filter" type="time"/>Morning</a>   
+    <a href="#" data="morning" class="time filter" type="time"/>Morning</a>    
     <a href="#" data="afternoon1" class="time filter" type="time"/>Afternoon 1</a>     
     <a href="#" data="afternoon2" class="time filter" type="time"/>Afternoon 2</a>  
-    <a href="#" data="afternoon3" class="time filter" type="time"/>Afternoon 3</a>            
+    <a href="#" data="afternoon3" class="time filter" type="time"/>Afternoon 3</a> 
+    <a href="#" data="evening" class="time filter" type="time"/>Evening</a>             
 </div>
 </td>
 </tr>
