views for supporting multiple conferences

--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -1,15 +1,21 @@
 {% extends "layout.html" %}
+{% block static %}
+<script type="text/javascript" src="/static/json/{{conf}}/papers.json"></script>
+<script type="text/javascript" src="/static/json/{{conf}}/sessions.json"></script>
+<script type="text/javascript" src="/static/json/{{conf}}/schedule.json"></script>
+<script type="text/javascript" src="/static/json/{{conf}}/offline_recs.json"></script>
+{% endblock %}
 {% block links %}
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
-<a class="button navitem" href="/home">My Papers</a>
-<a class="button navitem" href="/schedule">My Schedule</a>
+<a class="button navitem" href="/{{conf}}/papers">My Papers</a>
+<a class="button navitem" href="/{{conf}}/schedule/{{conf}}">My Schedule</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 {% block content %}   
 <div class="goto-link">
-<a class="button" href="/home">Go to My Papers</a>
-<a class="button" href="/schedule">Go to My Schedule</a>
+<a class="button" href="/{{conf}}/home">Go to My Papers</a>
+<a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
 
 <!-- Selected Paper -->
