--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -23,11 +23,8 @@ Cobfer Template Layout
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
-<script type="text/javascript" src="/static/json/sigmod2013/papers.json"></script>
-<script type="text/javascript" src="/static/json/sigmod2013/sessions.json"></script>
-<script type="text/javascript" src="/static/json/sigmod2013/schedule.json"></script>
-<script type="text/javascript" src="/static/json/sigmod2013/offline_recs.json"></script>
-
+{% block static %}
+{% endblock %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
