a minor correction -- issues with some links

--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -14,7 +14,7 @@
 {% endblock %}
 {% block content %}   
 <div class="goto-link">
-<a class="button" href="/{{conf}}/home">Go to My Papers</a>
+<a class="button" href="/{{conf}}/papers">Go to My Papers</a>
 <a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
 
