--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -18,7 +18,7 @@
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
 </div>
 <div class="goto-link">
-<a class="button" href="/{{conf}}/home">Go to My Papers</a>
+<a class="button" href="/{{conf}}/papers">Go to My Papers</a>
 </div>	
 <!--  Schedule -->
 <div id="schedule">	
