--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -24,8 +24,24 @@ Cobfer Template Layout
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
 {% block static %}
+<script type="text/javascript" src="/static/conf/{{conf}}/data/papers.json"></script>
+<script type="text/javascript" src="/static/conf/{{conf}}/data/sessions.json"></script>
+<script type="text/javascript" src="/static/conf/{{conf}}/data/schedule.json"></script>
+<script type="text/javascript" src="/static/conf/{{conf}}/data/offline_recs.json"></script>
 {% endblock %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<style>
+#headlink-left{
+  position:absolute;
+  /*top: 0.7em;*/
+  top:0.2em;
+  left:0;
+  color: #F6F6F6;
+  background-image: url({% block logo %}/static/conf/{{conf}}/logo/logo.png {% endblock %});
+  background-size: 5.67em 3.7em;
+  background-repeat: no-repeat;
+}
+</style>
 </head>
 
 <div id="header">
