more changes around structure

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -3,7 +3,7 @@
 @author: Anant Bhardwaj
 @date: Feb 12, 2012
 
-Cobfer Template Layout
+Confer Template Layout
 -->
 
 
@@ -19,7 +19,7 @@ Cobfer Template Layout
 <meta name="viewport" content="initial-scale=1.0 user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<link rel="stylesheet" type="text/css" href="/static/css/desktop.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/confer.css" />
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
