--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -1,3 +1,10 @@
+<!--
+@author: Anant Bhardwaj
+@date: Feb 12, 2012
+
+Confer Login/Register Template Layout
+-->
+
 <html>
 
 <head>
@@ -8,7 +15,7 @@
 <meta name="viewport" content="initial-scale=1.0 user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<link rel="stylesheet" type="text/css" href="/static/css/desktop.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/confer.css" />
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
