--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -3,7 +3,7 @@
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem" href="/{{conf}}/schedule/{{conf}}">My Schedule</a>
+<a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 {% block content %}   
