--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -63,7 +63,7 @@ Tag papers you want to see and get social recommendations of other papers you ma
       	populate_papers()
       	bind_events()
         //$('.paper-cb').ellipsis()
-        log('home')
+        log('papers')
     });
 </script>
 <script type="text/javascript" src="/static/javascript/confer.js"></script>
