--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -12,24 +12,30 @@
 <div class="blurb">
 <br />
 <p>
-Confer helps you build a personal schedule for a conference.  Key features include:
-<ul>
-<li>bookmark your favorite papers and sessions</li>
-<li>get social recommendations on other papers and sessions you may like</li>
-<li>create a personal schedule and find interesting talks at the conference</li>
-</ul>
-</p>
-<p>
-Confer runs in your browser, and works both on desktop and mobile devices. It also supports offline mode so once you have loaded the app, it will continue to work without an Internet connection.  In addition, your favorites, recommendations, and schedule are synced across devices, so you will have everything available on your desktop, tablet, and phone.
+Confer helps you build a personal schedule for conference you are attending.
 </p>
 <br />
 </div>
 
 <div id="home">
-  <h3 class="collapsible-title collapsible" id="conf_toggle" data="conf_container">Conferences</h3>	
 	<div id="conf_container">
-		<table id="conferences" class="paper-container">
-            {{conferences}}
+		<table id="conferences" class="conference-container">
+            {% for conf in conferences %}
+            <tr class="clickable">
+                <td class="metadata">
+                    <a href="/{{conf.unique_name}}/">
+                    <span class="cover-icon link" style="background-image:url(/static/conf/{{conf.unique_name}}/logo/cover.png);"></span>
+                    </a>
+                </td>
+                <td class="content">
+                <ul>
+                    <li><h3><span class="link"><a href="/{{conf.unique_name}}/">{{conf.title}}</a></span></h3></li>
+                    <li> <span class="conf-date">{{conf.start_date}} to {{conf.end_date}}</span> <span class="conf-location">{{conf.location}}</span></li>
+                    <li class="abstract">{{conf.blurb}}</li>
+                </ul>
+                </td>
+            </tr>
+            {% endfor %}
 		</table>
 	</div>
 <br />
