--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -5,7 +5,10 @@
 {% block content %}
 <form method="POST" action="/login">
 	{% csrf_token %}
-	<h3>Confer Login</h3>
+	<h3>Confer</h3>
+	<p class="teaser">
+	Confer helps you build a personal schedule for conference you are attending. It helps you decide where to spend your precious time by providing social recommendations based on your interests.
+	</p>
 	<hr />
 	<label for="username">Email</label><br />
 	<input type="text" name="login_email" id="login_email" placeholder="Your email address"/><br /><br />
