allow logout from the landing page

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -2,6 +2,8 @@
 {% block static %}
 {% endblock %}
 {% block links %}
+<span id="logged_in_name"></span> &nbsp;
+<a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 
 {% block content %} 
