--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -2,7 +2,7 @@
 {% block static %}
 {% endblock %}
 {% block links %}
-<span id="logged_in_name"></span> &nbsp;
+<span id="logged_in_name">{{login_name}}</span> &nbsp;
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 
