wtf -- when did this happen? localStorage must clear itself on login -- did sigmod run with this bug and nobody recognized it

--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -3,6 +3,13 @@
 <a class="button" href="/register">Create a New Account</a>
 {% endblock %}
 {% block content %}
+<script type="text/javascript">
+localStorage.removeItem('login_id')
+localStorage.removeItem('login_name')
+localStorage.removeItem('recommended')
+localStorage.removeItem('starred')
+localStorage.removeItem('user_recs')
+</script>
 <form method="POST" action="/login">
 	{% csrf_token %}
 	<h3>Confer</h3>
