--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -1,10 +1,11 @@
 {% extends "login-layout.html" %}
 {% block links %}
-<a class="button" href="/login">Log In</a>
+<a class="button" href="/login?redirect_url={{redirect_url}}">Log In</a>
 {% endblock %}
 {% block content %}
 <form method="POST" action="/register" autocomplete="off">
 	{% csrf_token %}
+	<input type="hidden" name="redirect_url" value="{{redirect_url}}" />
 	<h3>Create a new account</h3>
 	<hr />
 	<label for="email">Email Address</label><br />
