--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -6,7 +6,12 @@
 
 {% block content %} 
 
-
+<div class="blurb">
+    <br />
+    Confer helps you build a personal schedule for conference you are attending. It helps you decide where to spend your precious time by providing social recommendations based on your interests.
+    <br />
+    <br />
+</div>
 
 <div id="home">
 	<div id="conf_container">
