--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -21,6 +21,19 @@ Confer Login/Register Template Layout
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<style>
+#headlink-left{
+  position:absolute;
+  /*top: 0.7em;*/
+  top:0.7em;
+  left:0;
+  color: #F6F6F6;
+  background-image: url({% block logo %}/static/img/logo.png {% endblock %});
+  background-size: 11em 3em;
+  background-repeat: no-repeat;
+}
+</style>
+
 </head>
 
 <div id="header">
