--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -42,12 +42,14 @@ Confer Template Layout
 }
 </style>
 </head>
-
+<body>
 <div id="header">
 	<div id="wrap">
+    {% block headlink-left %}
 		<span id="headlink-left">
 			<a id="logo" href="/{{conf}}/"></a>
 		</span>
+    {% endblock %}
 		<span id="headlink-right">
       {% block links %}
 			<span id="logged_in_name"></span> &nbsp;
@@ -60,8 +62,6 @@ Confer Template Layout
 	</div>
 </div>
 
-
-<body>
 <div id="page">
 <div id="content">
 {% block content %}
