--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -44,11 +44,11 @@
                 <td class="content">
                 <ul>
                     <li><h3><span class="link"><a href="/{{conf.unique_name}}/">{{conf.title}}</a></span></h3></li>
-                    <li> <span class="conf-date">{{conf.start_date}} to {{conf.end_date}}</span> <span class="conf-date">{{conf.location}}</span></li>
+                    <li> <span class="info-box">{{conf.start_date}} to {{conf.end_date}}</span> <span class="info-box">{{conf.location}}</span></li>
                     <li class="abstract">{{conf.blurb}}</li>
                 </ul>
                 <br/>
-                <a href="/{{conf.unique_name}}/" class="button">Browse this conference</a>
+                <a href="/{{conf.unique_name}}/" class="conf-button">Browse this conference</a>
                 </td>
             </tr>
             {% endfor %}
