--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -19,6 +19,6 @@ localStorage.removeItem('user_recs')
 	<input type="text" name="login_email" id="login_email" placeholder="Your email address"/><br /><br />
 	<label for="password">Password</label><br />
 	<input type="password" name="login_password" id="login_password" placeholder="Your password"/><br /><br />
-	<input type="submit" value="Log In" />
+	<input type="submit" class="button" value="Log In" />
 </form>
 {% endblock %}
