--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -18,6 +18,6 @@
 	<input type="password" name="password" id="password" placeholder="Enter your password"/><br /><br />
 	<label for="password2">Confirm Password</label><br />
 	<input type="password" name="password2" id="password2" placeholder="Enter password again"/><br /><br />
-	<input type="submit" value="Register" />
+	<input type="submit" class="button" value="Register" />
 </form>
 {% endblock %}
