some minor changes

--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -91,7 +91,7 @@ Tag sessions and papers you want to see and get updated recommendations on the f
 <script type="text/javascript">
     $(document).ready(function(){
         $("#logged_in_name").html(localStorage.getItem('login_name'))
-        populate_sessions()
+        populate_schedule()
         setup_filters()
         bind_events()
         log('schedule')
