--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -26,6 +26,7 @@ Confer Template Layout
 <script type="text/javascript" src="/static/conf/{{conf}}/data/papers.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/sessions.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/schedule.json"></script>
+<script type="text/javascript" src="/static/conf/{{conf}}/data/filters.json"></script>
 <script type="text/javascript" src="/static/conf/{{conf}}/data/offline_recs.json"></script>
 {% endblock %}
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
