small date formatting

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -44,7 +44,7 @@
                 <td class="content">
                 <ul>
                     <li><h3><span class="link"><a href="/{{conf.unique_name}}/">{{conf.title}}</a></span></h3></li>
-                    <li> <span class="info-box">{{conf.start_date}} to {{conf.end_date}}</span> <span class="info-box">{{conf.location}}</span></li>
+                    <li> <span class="info-box">{{conf.start_date}} - {{conf.end_date}}</span> <span class="info-box">{{conf.location}}</span></li>
                     <li class="abstract">{{conf.blurb}}</li>
                 </ul>
                 <br/>
