--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -48,7 +48,7 @@
                     <li class="abstract">{{conf.blurb}}</li>
                 </ul>
                 <br/>
-                <a href="/{{conf.unique_name}}/" class="conf-button">Browse this conference</a>
+                <a href="/{{conf.unique_name}}/" class="conf-button">Browse</a>
                 </td>
             </tr>
             {% endfor %}
