--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "login-layout.html" %}
 {% block links %}
-<a class="button" href="/register?redirect_url={{redirect_url}}">Create a New Account</a>
+<a class="button" href="/register?redirect_url={{redirect_url}}">Sign Up</a>
 {% endblock %}
 {% block content %}
 <script type="text/javascript">
