--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -5,11 +5,10 @@
 
 Confer Template Layout
 -->
-
+<html manifest="/static/conf/{{conf}}/cache.manifest">
 <!--
-<html manifest="/static/cache.manifest">
--->
 <html>
+-->
 <head>
 <title>Confer</title>
 <meta charset="utf-8">
