Add link for coming back to the landing page

--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -2,6 +2,7 @@
 {% block links %}
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
+<a class="button navitem" href="/">Home</a>
 <a class="button active navitem" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem" href="/logout">Log Out</a>
