enable offline recommendation

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block html %}
+<html manifest="/static/cache.manifest">
+{% endblock %}
 {% block static %}
 {% endblock %}
 {% block headlink-left %}
