--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -5,11 +5,9 @@
 
 Confer Template Layout
 -->
-<!--
+{% block html %}
 <html manifest="/static/conf/{{conf}}/cache.manifest">
--->
-
-<html>
+{% endblock %}
 <head>
 <title>Confer</title>
 <meta charset="utf-8">
