landing page -- not offline

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block html %}
-<html manifest="/static/cache.manifest">
+<html>
 {% endblock %}
 {% block static %}
 {% endblock %}
