--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -22,6 +22,13 @@ body {
 }
 
 
+#logo{
+  font-family: 'Iceland', cursive;
+  font-weight: 400;
+  font-size: 4em;
+}
+
+
 /**************************
  * Touch Device Specific
  **************************/
