--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block headlink-left %}
 <span id="headlink-left">
-    <a id="logo" href="/"></a>
+    <a id="logo" href="/">Confer</a>
 </span>
 {% endblock %}
 {% block links %}
@@ -15,14 +15,6 @@
 {% block content %} 
 <style>
 #headlink-left{
-  position:absolute;
-  /*top: 0.7em;*/
-  top:0.9em;
-  left:0;
-  color: #F6F6F6;
-  background-image: url({% block logo %}/static/img/logo.png {% endblock %});
-  background-size: 11em 2.5em;
-  background-repeat: no-repeat;
 }
 </style>
 
