--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -17,6 +17,7 @@ Confer Template Layout
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
 <link rel="stylesheet" type="text/css" href="/static/css/confer.css" />
+<link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
