--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -12,34 +12,23 @@ Confer Login/Register Template Layout
 <meta charset="utf-8">
 
 <meta name="HandheldFriendly" content="true" />
-<meta name="viewport" content="initial-scale=1.0 user-scalable=no" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="initial-scale=1.0 user-scalable=no"/>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
 
-<link rel="stylesheet" type="text/css" href="/static/css/confer.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/confer.css"/>
+<link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style>
-#headlink-left{
-  position:absolute;
-  /*top: 0.7em;*/
-  top:0.9em;
-  left:0;
-  color: #F6F6F6;
-  background-image: url({% block logo %}/static/img/logo.png {% endblock %});
-  background-size: 11em 2.5em;
-  background-repeat: no-repeat;
-}
-</style>
 
 </head>
 
 <div id="header">
 	<div id="wrap">
 		<span id="headlink-left">
-			<a id="logo" href="/"></a>
+			<a id="logo" href="/">Confer</a>
 		</span>
 		<span id="headlink-right">
       {% block links %}
