--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -17,7 +17,7 @@ Confer Template Layout
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
 <link rel="stylesheet" type="text/css" href="/static/css/confer.css" />
-<link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Cantora+One' rel='stylesheet' type='text/css'>
 <link href="/static/css/third-party/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/static/javascript/third-party/jquery.min.js"></script>	
 <script type="text/javascript" src="/static/javascript/third-party/jquery-ui.js"></script>
@@ -37,7 +37,7 @@ Confer Template Layout
   left:0;
   color: #F6F6F6;
   background-image: url({% block logo %}/static/conf/{{conf}}/logo/logo.png {% endblock %});
-  background-size: 8em 3.7em;
+  background-size: 11em 3.7em;
   background-repeat: no-repeat;
 }
 </style>
