--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -23,9 +23,9 @@ body {
 
 
 #logo{
-  font-family: 'Iceland', cursive;
+  font-family: 'Cantora One', cursive;
   font-weight: 400;
-  font-size: 4em;
+  font-size: 3em;
 }
 
 
@@ -427,7 +427,7 @@ textarea {
 #headlink-left a{
   text-decoration: none;
   color: #F6F6F6;
-  width: 12em;
+  width: 15em;
   height: 3.7em;
   display: inline-block;
 }
