--- a/server/templates/reset.html
+++ b/server/templates/reset.html
@@ -5,7 +5,7 @@
 {% block content %}
 <script type="text/javascript">
 </script>
-<form method="POST" action="/reset">
+<form method="POST" action="/reset/{{encrypted_email}}">
 	{% csrf_token %}
 	<input type="hidden" name="redirect_url" value="{{redirect_url}}" />
 	<h3>Confer Reset Password</h3>
@@ -15,7 +15,7 @@
         {% endfor %}
         <br />
     </div>
-	<input type="hidden" name="user_email" id="user_email" />
+	<input type="hidden" name="user_email" id="user_email" value="{{user_email}}" />
 	<label for="new_password">New Password</label><br />
 	<input type="password" name="new_password" id="new_password" placeholder="New password"/><br /><br />
 	<label for="new_password2">Confirm Password</label><br />
