some minor user interaction

--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "login-layout.html" %}
 {% block links %}
 <a class="button" href="/register?redirect_url={{redirect_url}}">Sign Up</a>
-<a class="button" href="/reset">Reset Password</a>
+<a class="button" href="/forgot">Forgot Password</a>
 {% endblock %}
 {% block content %}
 <script type="text/javascript">
