--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -350,8 +350,11 @@ input[type="text"], input[type="password"], select{
 button, input[type="button"], input[type="submit"]{
   font-size: 1em;
 	padding:0.4em 0.7em;
-	margin-left: 0;
-  
+	border-radius: 0.3em;
+  border: 1px solid #2B2B2B;
+  text-decoration: none;
+  color: #2B2B2B;
+  cursor: pointer;
 }
 
 .button{
